<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FastMart</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="account_type">Account Type</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="logout">Log Out</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="order_history">Order History</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Type</string>
    <string name="product_price">Product Price</string>
    <string name="product_description">Product Description</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="buy_now">Buy Now</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="colour_scheme">Colour Scheme</string>
    <string name="save_profile">Save Profile</string>
    <string name="track_shipment">Track Shipment</string>
    <string name="type_message">Type a message...</string>
    <string name="chat_with_seller">Chat with Seller</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="send">Send</string>
    <string name="nav_favourites">My Favourites</string>
    <string name="onboarding_title">Welcome to FastMart</string>
    <string name="onboarding_subtitle">Shop smart, save more</string>
    <string name="get_started">Get Started</string>
    <string name="search_hint">Search products...</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="clear_all">Clear All</string>
</resources>